<resources>
    <string name="app_name">CarPool</string>
    <string name="LOG_IN">Log in</string>
    <string name="SIGN_UP">Sign up</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="ForgetPassword">Forget Password</string>
    <string name="rePassword">retype Password</string>
    <string name="Name">Name</string>
    <string name="Source">Pick up</string>
    <string name="Destination">Drop off</string>
    <string name="college">Heading to college</string>
    <string name="home">Heading home</string>
    <string name="recycler_title">Available routes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pickupT">Pick up time</string>
    <string name="DropOffTime">Drop off time</string>
    <string name="Confirmation">Ride Confirmation</string>
    <string name="SourceC">your Pick up ride from</string>
    <string name="DestinationC">Drop off to gate </string>
    <string name="pickupTC">Pick up time at </string>
    <string name="DropOffTimeC">Drop off time at </string>
    <string name="RideConfirm">Confirm </string>
    <string name="RideCancel">Cancel </string>
    <string name="Total">your total is 50LE per person </string>
    <string name="Offered">Please choose your route </string>
    <string name="Date">Date of ride </string>
    <string name="Logout">Available seats </string>
    <string name="Car_number">Car Number </string>
    <string name="EnterDate">Enter Date </string>
    <string name="title_activity_cart">Cart</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_history">history</string>
    <string name="recycler_Cart">you have till 11:30 pm to confirm morning rides and till 4:30 for return rides</string>
    <string name="Timeres">Time restriction </string>
    <string name="MyCart">My Cart</string>
</resources>